crates/toml/tests/snapshots/invalid/array/no-close-05.stderr
TOML parse error at line 1, column 28
  |
1 | no-close-05 = [{ key = 42}
  |                            ^
unclosed array, expected `]`
